--- a/docs/labs/lab01/st_lab01.Rmd
+++ b/docs/labs/lab01/st_lab01.Rmd
@@ -258,10 +258,9 @@ ceiling(x)
   
   ¿Qué obtienes?
   
-4. Crea un script de R llamado `mi_script.R` donde guardes todos los pasos anteriores. Ejecuta el script.
+4. Crea una variable llamada Numero que contenga el número 3 y otra llamada numero que también contena el valor 6. Suma 7 a la variable Numero, ¿qué obtienes?
 
-5. Crea una variable llamada Numero que contenga el número 3 y otra llamada numero que también contena el valor 6. Suma 7 a la variable Numero, ¿qué obtienes?
-
-6. Utiliza la ayuda para determinar la utilidad de la función `ls()`. ¿Qué obtienes al ejecutarla?
+5. Utiliza la ayuda para determinar la utilidad de la función `ls()`
+. ¿Qué obtienes al ejecutarla?
 
 
