--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -34,5 +34,6 @@ Esta es la página del curso de Programación creado por
   - [Lab 02 - Vectores en R](./labs/lab02/lab02.html)
   - [Lab 03 - Factores en R](./labs/lab03/lab03.html)
   - [Lab 04 - Matrices in Arrays en R](./labs/lab04/lab04.html)
+  - [Lab 05 - Dataframes en R](./labs/lab05/lab05.html)
   
   
