--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -36,5 +36,6 @@ Esta es la página del curso de Programación creado por
   - [Lab 04 - Matrices in Arrays en R](./labs/lab04/lab04.html)
   - [Lab 05 - Dataframes en R](./labs/lab05/lab05.html)
   - [Lab 06 - Listas y Fechas en R](./labs/lab06/lab06.html)
+  - [Lab 07 - Estadística Descriptiva en R](./labs/lab07/lab07.html)
   
   
